# Artifical_Intelligence

./: .gitignore  BTC-USD_spike_data.csv  Buildv1_0_0.py  Buildv1_1_0(dont open).cpp  Buildv1_1_1.cpp  Buildv1_3_1.cpp  Buildv1_3_2.cpp  CommandParamExtractor.cpp  CommandParamExtractor.h  INTEGRATION_SUMMARY.md  InferenceEngine.cpp  InferenceEngine.h  NeuronAndConnection.py  PROJECT_MASTER_GUIDE.md  ParameterExtractorV2.cpp  ParameterExtractorV2.h  README.md  SHUTDOWN_REPORT.md  START_HERE.md  a  anothermodelfromanai.py  build  coin.csv  data.csv  dataCreatorForModel.py  digit_data.csv  digits_dataset.csv  dosya.txt  drawingNumbers.py  live_logmel.py  llm_transformation_guide.md  minst.csv  modelTrainigForPose.py  modeltrainingprogram.py  nativeMaker.sh  network_changes_logs.py  neuronv1.2.py  neuronv1.3.py  neuronv1.5.py  neuronv1.6.py  (+20 more)
ByteBPE/: ByteBPETokenizer.cpp  ByteBPETokenizer.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp  tokenizer_model.json
Helpers/: buildController.py  cppExamples.cpp  layerCalculate.cpp  network_changes_logs.py  tokenizer.py  torchExamples.py
LLM/: Buildv1_2_0.cpp
LLM/Embeddings/: bpe_tokenizer.json  bytebpe.py  commandCreator.py  command_data.csv  createEmbeddings.py  embeddings.db  embeddings.json  embeddingsForCommands.db  helpers.py  inference_example.py  parameter_extraction.py  test_bpe_tokenizer.py  train_enhanced_embeddings.py  visualize_embeddings_3d.py
LLM/src/: LLM_Buildv1_3_0_Optimized.cpp
web/: .env.example  model.js  model.wasm  package-lock.json  package.json  server.js
(+16 files in other folders)
